# maggie_drivers

./: .gitignore  AUTHORS.md  README.md
communications/: CMakeLists.txt  README.md  package.xml
communications/src/ipc/: CMakeLists.txt  semaphores.c
communications/src/ipc/test/: test_manual_semaphores.c
communications/src/serial_port/: CMakeLists.txt  rs232.cpp
communications/src/serial_port/test/: test_manual_rs232.cpp  test_manual_screen.cpp
ir_drivers/: AUTHORS.md  README.md  package.xml
ir_drivers/src/: irtrans_mock.h  irtrans_wrapper.cpp
ir_drivers/third_parties/: irserver.sh
ir_drivers/third_parties/IRTrans_shlib/: IRTrans Shared Lib Doc.txt  dlltest.c  makefile
ir_drivers/third_parties/IRTrans_shlib/arm/: errcode.h  network.h
ir_drivers/third_parties/IRTrans_shlib/remotes/: TVlabo.rem
ir_drivers/third_parties/IRTrans_shlib/x86/: network.h  remote.h
ir_drivers/third_parties/irserver/: install.sh  ip_assign64
ir_drivers/third_parties/irserver/GUIClient/: en.tra
ir_drivers/third_parties/irserver/remotes/: mce-keyboard.rem  mce-mouse.rem
labjack_drivers/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
labjack_drivers/scripts/: rosdep.sh
labjack_drivers/src/: CMakeLists.txt  labjack_driver_interface.h  ljacklm_wrapper.cpp
labjack_drivers/third_parties/test/: test_python.py  test_python_ai.py
maggie_drivers/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
maggie_ir_drivers/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
maggie_ir_drivers/include/maggie_ir_drivers/: irtrans_mock.h  irtrans_wrapper.h
maggie_ir_drivers/scripts/: config_driver.sh  rosdep.sh
maggie_ir_drivers/src/: CMakeLists.txt  ir_driver_interface.h  irtrans_mock.h  irtrans_wrapper.cpp  irtrans_wrapper.h
maggie_ir_drivers/third_parties/: irserver.sh
maggie_ir_drivers/third_parties/IRTrans_shlib/: README.txt  install.sh  uninstall.bash
maggie_ir_drivers/third_parties/IRTrans_shlib/arm/: IRTrans.h  remote.h
maggie_ir_drivers/third_parties/IRTrans_shlib/x64/: errcode.h
maggie_ir_drivers/third_parties/IRTrans_shlib/x86/: IRTrans.h
maggie_ir_drivers/third_parties/irserver/: README.txt  ip_assign  irclient  irclient64  irserver  irserver64  uninstall.sh
maggie_labjack_drivers/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
maggie_labjack_drivers/include/maggie_labjack_drivers/: ljacklm_mock.h
maggie_labjack_drivers/scripts/: rosdep.sh
maggie_labjack_drivers/src/: CMakeLists.txt  ljacklm_mock.h  ljacklm_wrapper.cpp  ljacklm_wrapper.h
maggie_labjack_drivers/third_parties/: install.bash
maggie_labjack_drivers/third_parties/test/: test_cpp.sh
maggie_motor_drivers/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
maggie_motor_drivers/data/motor_configs/maggie/actuator/: aBD.xml  dBD.xml  dBI.xml  dCH.xml  test.xml
maggie_motor_drivers/data/motor_configs/mcdc3006CanOpen/: rightWheels.xml
maggie_motor_drivers/data/motor_configs/mcdc3006s/: configMCDC3006S.xml  prueba.xml  text.xml
maggie_motor_drivers/data/motor_configs/necky/actuator/: aconf.xml
maggie_motor_drivers/data/motor_configs/necky/dynamixel/: cuello_dynamixel2.xml  cuello_dynamixel4.xml  cuello_dynamixel5.xml
maggie_motor_drivers/include/maggie_motor_drivers/: mcdc3006s.h
maggie_motor_drivers/src/: CMakeLists.txt  mcdc3006s.cpp  mcdc3006s.h  mcdc3006s_data.h  mcdc3006s_mock.h  motor_driver_interface.h
maggie_motor_drivers/src/test/: test_manual_mcdc3006s.cpp
maggie_rfid_drivers/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
maggie_rfid_drivers/include/maggie_rfid_drivers/: rfid_driver_data.h  rfid_driver_interface.h  rfid_driver_wrapper.h  rfid_mock.h
maggie_rfid_drivers/script/: rosdep.sh
maggie_rfid_drivers/src/: CMakeLists.txt  rfid_driver_wrapper.cpp  rfid_driver_wrapper.h  rfid_mock.h
maggie_rfid_drivers/third_parties/ID_ISC.SDK.Linux_V04.06.10/: Readme_Linux.txt  install.bash
maggie_serial_comm_drivers/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
maggie_serial_comm_drivers/src/: CMakeLists.txt  serial_communication.cpp  serial_communication.h  serial_communication_interface.h  serial_communication_mock.h
motor_drivers/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
motor_drivers/data/motor_configs/maggie/actuator/: aCV.xml  dCV.xml
motor_drivers/data/motor_configs/mcdc3006CanOpen/: leftWheels.xml
motor_drivers/src/: CMakeLists.txt  mcdc3006s.cpp  mcdc3006s.h  motor_driver_interface.h  readme.txt
motor_drivers/src/driver_interface/: CMakeLists.txt  DriverConfiguration.cpp  DriverConfiguration.h  DriverInterface.cpp  DriverInterface.h  DriverMotorSensor.cpp  DriverMotorSensor.h  DriverStatus.cpp  DriverStatus.h
motor_drivers/src/dynamixel/: CMakeLists.txt  DynamixelConfiguration.cpp  DynamixelConfiguration.h  DynamixelDriver.cpp  DynamixelDriver.h  DynamixelMotorSensor.cpp  DynamixelMotorSensor.h  DynamixelStatus.cpp  DynamixelStatus.h  TestDynamixel.cpp  configDynamixel  demo.cpp  test_DynamixelPV.cpp
motor_drivers/src/dynamixel/StartDynamixel/: StartDynamixel.c
motor_drivers/src/dynamixel/output/: audit.txt
motor_drivers/src/mcdc3006s/: CMakeLists.txt  MCDC3006SConfiguration.cpp  MCDC3006SConfiguration.h  MCDC3006SDriver.cpp  MCDC3006SDriver.h  MCDC3006SMotorSensor.cpp  MCDC3006SMotorSensor.h  MCDC3006SStatus.cpp  MCDC3006SStatus.h  testMCDC3006SDriver.cpp
motor_drivers/src/mcdc3006s/MCDC3006Slib/: CMakeLists.txt  MCDC3006S.c  MCDC3006S.h  MCDC3006S_data.h  testMCDC3006S.c
motor_drivers/src/mcdc3006s/MCDC3006Slib/test/: CMakeLists.txt
motor_drivers/src/mcdc3006s/test/: CMakeLists.txt  testMCDC3006SDriver.cpp
motor_drivers/src/test/: testMCDC3006S.c
rfid_drivers/: AUTHORS.md  README.md  package.xml
rfid_drivers/script/: rosdep.sh
rfid_drivers/src/: CMakeLists.txt  rfid_mock.h
rfid_drivers/third_parties/ID_ISC.SDK.Linux_V04.06.10/: uninstall.bash
serial_comm_drivers/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
serial_comm_drivers/src/: serial_communication.cpp  serial_communication_mock.h
(+315 files in other folders)
