add_library(mcdc3006s
            MCDC3006S.c MCDC3006S.h MCDC3006S_data.h)
target_link_libraries(mcdc3006s
                      semaphores rs232 timer ${catkin_LIBRARIES})

install(TARGETS mcdc3006s
    ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
    LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
    RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
